--- a/5_stage_pipelined_resilient/skeleton.qsf
+++ b/5_stage_pipelined_resilient/skeleton.qsf
@@ -138,9 +138,10 @@ set_global_assignment -name VECTOR_WAVEFORM_FILE razor_test.vwf
 set_global_assignment -name VHDL_FILE comparator_32_fast.vhd
 set_global_assignment -name VHDL_FILE razor_check.vhd
 set_global_assignment -name VHDL_FILE razor_dflipflop.vhd
+set_global_assignment -name VECTOR_WAVEFORM_FILE razor_dff_test.vwf
+set_global_assignment -name INCREMENTAL_VECTOR_INPUT_SOURCE razor_test.vwf
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name LL_ROOT_REGION ON -section_id "Root Region"
 set_global_assignment -name LL_MEMBER_STATE LOCKED -section_id "Root Region"
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
-set_global_assignment -name INCREMENTAL_VECTOR_INPUT_SOURCE razor_test.vwf
