--- a/5_stage_pipelined_resilient/skeleton.qsf
+++ b/5_stage_pipelined_resilient/skeleton.qsf
@@ -38,7 +38,7 @@
 
 set_global_assignment -name FAMILY "Cyclone II"
 set_global_assignment -name DEVICE EP2C35F672C7
-set_global_assignment -name TOP_LEVEL_ENTITY razor_latch
+set_global_assignment -name TOP_LEVEL_ENTITY processor
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 9.1
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "22:01:22  DECEMBER 26, 2009"
 set_global_assignment -name LAST_QUARTUS_VERSION "9.0 SP2"
